# gimkit

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/auto_answer/: mod.rs
src/cheatnetwork/: answer.rs  mod.rs
src/document/: action.rs  info.rs  mod.rs  recursion.rs
src/gim_tools/: answer_scraper.js  assignment.rs  mod.rs
src/login/: mod.rs
src/util/: mod.rs
src/utils/: mod.rs
