[package]
name = "gimkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
chromedriver-manager = "0.2.0"
colored = "2.0.4"
either = "1.9.0"
serde = "1.0.193"
serde_json = "1.0.108"
thirtyfour = "0.31.0"
tokio = { version = "1.34.0", features = ["full"] }
